subiendo contador de clicks

--- a/src/hojas-de-estilo/Boton.css
+++ b/src/hojas-de-estilo/Boton.css
@@ -14,8 +14,8 @@ button:hover{
   background-color: #dc7f40;
 }
 .boton-click{
-  background-color: #002ead;
+  background-color: #0fd125;
 }
 .boton-reiniciar{
-  background-color: #5a01a7;
+  background-color: #602792;
 }
