--- a/src/hojas-de-estilo/Boton.css
+++ b/src/hojas-de-estilo/Boton.css
@@ -14,7 +14,7 @@ button:hover{
   background-color: #dc7f40;
 }
 .boton-click{
-  background-color: #0fd125;
+  background-color: #00ad14;
 }
 .boton-reiniciar{
   background-color: #602792;
